Fixing warnings in Java and build files.